[gd_scene load_steps=13 format=3 uid="uid://cnor6jdbe28rj"]

[ext_resource type="Script" path="res://cube/cube.gd" id="1_6dv3v"]
[ext_resource type="BoxMesh" uid="uid://b8huspb6fwokg" path="res://cube/cube_mesh.tres" id="2_w48q4"]
[ext_resource type="BoxMesh" uid="uid://c466clxudld4s" path="res://cube/cube_mesh_flat.tres" id="3_tvqe8"]
[ext_resource type="BoxMesh" uid="uid://b64carpagmht0" path="res://cube/cube_mesh_bomb.tres" id="4_mlbjy"]
[ext_resource type="BoxMesh" uid="uid://dn8ayd0wx7qt6" path="res://cube/cube_mesh_radioactive.tres" id="5_kdr08"]
[ext_resource type="Script" path="res://cube/cube_scanner.gd" id="6_vqy3y"]
[ext_resource type="AudioStream" uid="uid://bjpkhrcmt7lw" path="res://assets/audio/open-tile.wav" id="7_wtr4x"]
[ext_resource type="AudioStream" uid="uid://bbvy78gqnhud1" path="res://assets/audio/place-flag.wav" id="8_bfq7g"]
[ext_resource type="AudioStream" uid="uid://dya4t4p2oap3d" path="res://assets/audio/remove-flag.wav" id="9_p8p1n"]
[ext_resource type="AudioStream" uid="uid://blr22e80lqmjd" path="res://assets/audio/hover-cube.wav" id="10_l0bv5"]

[sub_resource type="BoxShape3D" id="BoxShape3D_aokb8"]

[sub_resource type="BoxShape3D" id="BoxShape3D_y1sac"]
size = Vector3(2, 0.6, 2)

[node name="Cube" type="StaticBody3D" groups=["cubes"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0.5, 0.5)
script = ExtResource("1_6dv3v")
mesh = ExtResource("2_w48q4")
flatMesh = ExtResource("3_tvqe8")
bombMesh = ExtResource("4_mlbjy")
radioactiveMesh = ExtResource("5_kdr08")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_aokb8")

[node name="CubeMesh" type="MeshInstance3D" parent="."]
mesh = ExtResource("2_w48q4")

[node name="NearbyMinesLabel" type="Label3D" parent="."]
transform = Transform3D(-4.37114e-08, 1, 4.37114e-08, 0, -4.37114e-08, 1, 1, 4.37114e-08, 1.91069e-15, 0, 0.515925, 0)
modulate = Color(0, 0, 0, 1)
font_size = 100

[node name="CubeScanner" type="Area3D" parent="."]
script = ExtResource("6_vqy3y")

[node name="CollisionShape3D" type="CollisionShape3D" parent="CubeScanner"]
shape = SubResource("BoxShape3D_y1sac")

[node name="RevealCube" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_wtr4x")
volume_db = -8.901
bus = &"Cube"

[node name="PlaceFlag" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_bfq7g")
volume_db = -28.576
bus = &"Cube"

[node name="RemoveFlag" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_p8p1n")
bus = &"Cube"

[node name="HighlightCube" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_l0bv5")
volume_db = -25.377
bus = &"Cube"

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
